--- a/src/v2/RobotoCondensed-Regular.ufo/lib.plist
+++ b/src/v2/RobotoCondensed-Regular.ufo/lib.plist
@@ -3497,6 +3497,13 @@
 	</array>
 	<key>com.schriftgestaltung.useNiceNames</key>
 	<false/>
+	<key>com.typemytype.robofont.foreground.layerStrokeColor</key>
+	<array>
+		<real>0.5</real>
+		<real>0.0</real>
+		<real>0.5</real>
+		<real>0.7</real>
+	</array>
 	<key>com.typemytype.robofont.guides</key>
 	<array>
 		<dict>
@@ -3664,6 +3671,14 @@
 	</array>
 	<key>com.typemytype.robofont.layerOrder</key>
 	<array>
+		<string>mask</string>
+	</array>
+	<key>com.typemytype.robofont.mask.layerStrokeColor</key>
+	<array>
+		<real>0.1705</real>
+		<real>0.8671</real>
+		<real>0.2883</real>
+		<real>0.9471</real>
 	</array>
 	<key>com.typemytype.robofont.segmentType</key>
 	<string>curve</string>
@@ -3681,38 +3696,8 @@
 				<string>S</string>
 				<string>a</string>
 				<string>g</string>
-				<string>guillemotleft</string>
-				<string>twosuperior</string>
-				<string>threesuperior</string>
-				<string>onesuperior</string>
-				<string>guillemotright</string>
-				<string>onequarter</string>
-				<string>onehalf</string>
-				<string>threequarters</string>
 				<string>circumflex</string>
 				<string>ogonek</string>
-				<string>uni0411</string>
-				<string>uni042B</string>
-				<string>uni044B</string>
-				<string>uni045B</string>
-				<string>uni0494</string>
-				<string>uni04A6</string>
-				<string>uni04FA</string>
-				<string>uni04FB</string>
-				<string>endash</string>
-				<string>emdash</string>
-				<string>uni2074</string>
-				<string>oneeighth</string>
-				<string>threeeighths</string>
-				<string>fiveeighths</string>
-				<string>seveneighths</string>
-				<string>uni035C</string>
-				<string>uniFE2D</string>
-				<string>uniFE2C</string>
-				<string>uniFE2B</string>
-				<string>uniFE22</string>
-				<string>uniFE23</string>
-				<string>uni042B.smcp</string>
 				<string>acircumflex</string>
 				<string>aogonek</string>
 			</array>
