Upright variable font generated

--- a/src/v2/Roboto-Thin.ufo/lib.plist
+++ b/src/v2/Roboto-Thin.ufo/lib.plist
@@ -3913,7 +3913,6 @@
 		<string>uni044F</string>
 		<string>uni0452</string>
 		<string>uni0454</string>
-		<string>uni0459</string>
 		<string>uni045A</string>
 		<string>uni045B</string>
 		<string>uni045F</string>
@@ -4071,8 +4070,8 @@
 		<string>circumflexhookcomb</string>
 		<string>circumflexgravecomb</string>
 		<string>circumflexacutecomb</string>
-		<string>brevegravecomb</string>
 		<string>commaaccentrotate</string>
+		<string>brevegravecomb</string>
 		<string>A.smcp</string>
 		<string>B.smcp</string>
 		<string>C.smcp</string>
@@ -4099,6 +4098,7 @@
 		<string>X.smcp</string>
 		<string>Y.smcp</string>
 		<string>Z.smcp</string>
+		<string>crossbar</string>
 		<string>zero.smcp</string>
 		<string>one.smcp</string>
 		<string>two.smcp</string>
@@ -4109,6 +4109,7 @@
 		<string>seven.smcp</string>
 		<string>eight.smcp</string>
 		<string>nine.smcp</string>
+		<string>dasiaoxia</string>
 		<string>zero.sup</string>
 		<string>one.sup</string>
 		<string>two.sup</string>
@@ -4119,8 +4120,6 @@
 		<string>seven.sup</string>
 		<string>eight.sup</string>
 		<string>nine.sup</string>
-		<string>crossbar</string>
-		<string>dasiaoxia</string>
 		<string>ringacute</string>
 		<string>uni0002</string>
 		<string>uni0009</string>
@@ -4155,6 +4154,7 @@
 		<string>nine.onum</string>
 		<string>zero.onum</string>
 		<string>seven.pnum</string>
+		<string>uni0459</string>
 		<string>b.ss06</string>
 		<string>c.ss06</string>
 		<string>d.ss06</string>
@@ -5651,9 +5651,9 @@
 		<string>uni01C4</string>
 		<string>uni01C5</string>
 		<string>uni01C6</string>
-		<string>tildemacroncomb</string>
 		<string>uniAB64</string>
 		<string>uniAB65</string>
+		<string>tildemacroncomb</string>
 		<string>uni0490.smcp</string>
 		<string>uniA7B0</string>
 		<string>uniA7B1</string>
@@ -5734,7 +5734,6 @@
 		<string>eight.tnum</string>
 		<string>one.tnum</string>
 		<string>uni006A.ccmp</string>
-		<string>uni1D96.ccmp</string>
 		<string>uni0249.ccmp</string>
 		<string>uni0268.ccmp</string>
 		<string>uni0458.ccmp</string>
@@ -5744,8 +5743,9 @@
 		<string>uni1DA4.ccmp</string>
 		<string>uni012F.ccmp</string>
 		<string>uni0456.ccmp</string>
-		<string>uni1D62.ccmp</string>
 		<string>uni03F3.ccmp</string>
+		<string>uni1D96.ccmp</string>
+		<string>uni1D62.ccmp</string>
 		<string>uni1DA8.ccmp</string>
 		<string>uni02B2.ccmp</string>
 		<string>uni2C7C.ccmp</string>
@@ -5959,16 +5959,16 @@
 		<string>bbar_uni1ABE</string>
 		<string>rrthook_uni1ABE</string>
 		<string>ampersand.smcp</string>
-		<string>Lslash.smcp</string>
 		<string>AE.smcp</string>
 		<string>Thorn.smcp</string>
+		<string>Lslash.smcp</string>
 		<string>Oslash.smcp</string>
 		<string>Hbar.smcp</string>
 		<string>Eng.smcp</string>
-		<string>acutedotcomb.lc</string>
 		<string>tildedieresiscomb.lc</string>
 		<string>dieresisacutecomb.lc</string>
 		<string>carondotcomb.lc</string>
+		<string>acutedotcomb.lc</string>
 		<string>dotmacroncomb.lc</string>
 		<string>macrongravecomb.lc</string>
 		<string>dieresismacroncomb.lc</string>
@@ -6496,7 +6496,7 @@
 		<string>uni040E</string>
 		<string>uni040D</string>
 		<string>Uring</string>
-		<string>N_j</string>
+		<string>N_J</string>
 		<string>Kcaron</string>
 		<string>Etatonos.smcp</string>
 		<string>NJ</string>
