--- a/src/v2/RobotoCondensed-Regular.ufo/lib.plist
+++ b/src/v2/RobotoCondensed-Regular.ufo/lib.plist
@@ -3891,7 +3891,7 @@
 		<string>alpha</string>
 		<string>beta</string>
 		<string>gamma</string>
-		<string>delta.alt</string>
+		<string>delta</string>
 		<string>epsilon</string>
 		<string>zeta</string>
 		<string>eta</string>
@@ -3961,7 +3961,6 @@
 		<string>uni044F</string>
 		<string>uni0452</string>
 		<string>uni0454</string>
-		<string>uni0459</string>
 		<string>uni045A</string>
 		<string>uni045B</string>
 		<string>uni045F</string>
@@ -4119,8 +4118,8 @@
 		<string>circumflexhookcomb</string>
 		<string>circumflexgravecomb</string>
 		<string>circumflexacutecomb</string>
-		<string>brevegravecomb</string>
 		<string>commaaccentrotate</string>
+		<string>brevegravecomb</string>
 		<string>A.smcp</string>
 		<string>B.smcp</string>
 		<string>C.smcp</string>
@@ -4147,6 +4146,7 @@
 		<string>X.smcp</string>
 		<string>Y.smcp</string>
 		<string>Z.smcp</string>
+		<string>crossbar</string>
 		<string>zero.smcp</string>
 		<string>one.smcp</string>
 		<string>two.smcp</string>
@@ -4157,6 +4157,7 @@
 		<string>seven.smcp</string>
 		<string>eight.smcp</string>
 		<string>nine.smcp</string>
+		<string>dasiaoxia</string>
 		<string>zero.sup</string>
 		<string>one.sup</string>
 		<string>two.sup</string>
@@ -4167,9 +4168,7 @@
 		<string>seven.sup</string>
 		<string>eight.sup</string>
 		<string>nine.sup</string>
-		<string>crossbar</string>
 		<string>ringacute</string>
-		<string>dasiaoxia</string>
 		<string>uni0002</string>
 		<string>uni0009</string>
 		<string>uni048D</string>
@@ -4179,7 +4178,7 @@
 		<string>uni0424</string>
 		<string>uni0463</string>
 		<string>alpha.alt</string>
-		<string>delta</string>
+		<string>delta.alt</string>
 		<string>R.alt</string>
 		<string>K.alt</string>
 		<string>k.alt</string>
@@ -4190,10 +4189,10 @@
 		<string>seven.alt</string>
 		<string>G.alt</string>
 		<string>C.ss06</string>
-		<string>G.ss06</string>
-		<string>D.ss06</string>
 		<string>O.ss06</string>
+		<string>G.ss06</string>
 		<string>Q.ss06</string>
+		<string>D.ss06</string>
 		<string>one.onum</string>
 		<string>two.onum</string>
 		<string>three.onum</string>
@@ -4203,6 +4202,7 @@
 		<string>nine.onum</string>
 		<string>zero.onum</string>
 		<string>seven.pnum</string>
+		<string>uni0459</string>
 		<string>b.ss06</string>
 		<string>c.ss06</string>
 		<string>d.ss06</string>
@@ -5690,6 +5690,7 @@
 		<string>dieresisgravecomb</string>
 		<string>dotmacroncomb</string>
 		<string>tildeacutecomb</string>
+		<string>tildedieresiscomb</string>
 		<string>macrongravecomb</string>
 		<string>macronacutecomb</string>
 		<string>macrondieresiscomb</string>
@@ -5704,7 +5705,6 @@
 		<string>uni0490.smcp</string>
 		<string>uniA7B0</string>
 		<string>uniA7B1</string>
-		<string>tildedieresiscomb</string>
 		<string>Chook.cn</string>
 		<string>chook.cn</string>
 		<string>Ghook.cn</string>
@@ -5782,7 +5782,6 @@
 		<string>eight.tnum</string>
 		<string>one.tnum</string>
 		<string>uni006A.ccmp</string>
-		<string>uni1D96.ccmp</string>
 		<string>uni0249.ccmp</string>
 		<string>uni0268.ccmp</string>
 		<string>uni0458.ccmp</string>
@@ -5792,8 +5791,9 @@
 		<string>uni1DA4.ccmp</string>
 		<string>uni012F.ccmp</string>
 		<string>uni0456.ccmp</string>
-		<string>uni1D62.ccmp</string>
 		<string>uni03F3.ccmp</string>
+		<string>uni1D96.ccmp</string>
+		<string>uni1D62.ccmp</string>
 		<string>uni1DA8.ccmp</string>
 		<string>uni02B2.ccmp</string>
 		<string>uni2C7C.ccmp</string>
@@ -6007,16 +6007,16 @@
 		<string>bbar_uni1ABE</string>
 		<string>rrthook_uni1ABE</string>
 		<string>ampersand.smcp</string>
-		<string>Lslash.smcp</string>
 		<string>AE.smcp</string>
 		<string>Thorn.smcp</string>
+		<string>Lslash.smcp</string>
 		<string>Oslash.smcp</string>
 		<string>Hbar.smcp</string>
 		<string>Eng.smcp</string>
-		<string>acutedotcomb.lc</string>
 		<string>tildedieresiscomb.lc</string>
 		<string>dieresisacutecomb.lc</string>
 		<string>carondotcomb.lc</string>
+		<string>acutedotcomb.lc</string>
 		<string>dotmacroncomb.lc</string>
 		<string>macrongravecomb.lc</string>
 		<string>dieresismacroncomb.lc</string>
@@ -6544,7 +6544,7 @@
 		<string>uni040E</string>
 		<string>uni040D</string>
 		<string>Uring</string>
-		<string>N_j</string>
+		<string>N_J</string>
 		<string>Kcaron</string>
 		<string>Etatonos.smcp</string>
 		<string>NJ</string>
